[package]
name = "test-by-a11y"
version = "0.2.0"
edition = "2021"
description = "Write tests for UIs through the accessibility interface."
authors = ["Lily Hopkins <lily@hpkns.uk>"]
license = "MIT"
repository = "https://github.com/lilopkins/test-by-a11y"

[target.'cfg(target_os = "linux")'.dependencies]
atspi = { version = "0.24.0", features = ["zbus"] }
futures = { version = "0.3.30", features = ["executor"] }

[dependencies]
log = "0.4.22"
thiserror = "1.0.63"

[dev-dependencies]
pretty_env_logger = "0.5.0"
